--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="logo">
         <a href="/">
-            kruemelmann
+            darkeevel
         </a>
     </div>
     <ul class="navbar">
